Fix legend alignment

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ fieldset, #links {
 
 legend {
 	color: white;
+	text-align: left;
 }
 
 #stop {
